# adj-test

./: LICENSE  README.md  adj-test.cabal  cabal.project
Adj/: Utils.hs
Problem/: just-for-test.hs
