name: adj-test
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: iokasimov
maintainer: iokasimov.m@gmail.com
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  build-depends: adj, base, ghc-prim
  default-extensions: DataKinds, ConstraintKinds, ExistentialQuantification, GADTs, QuantifiedConstraints, InstanceSigs
    FlexibleContexts, FlexibleInstances, KindSignatures, LiberalTypeSynonyms, LambdaCase, FunctionalDependencies
    MultiParamTypeClasses, PackageImports, PolyKinds, RankNTypes, ViewPatterns, ScopedTypeVariables, DerivingVia, NoImplicitPrelude
    StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeFamilyDependencies, TypeOperators
  exposed-modules: Adj.Utils
  ghc-options: -Wall -fno-warn-tabs -fno-warn-orphans

executable just-for-test
  main-is: Problem/just-for-test.hs
  build-depends: adj, base, ghc-prim
  default-extensions: AllowAmbiguousTypes, DataKinds, ConstraintKinds, ExistentialQuantification, GADTs, QuantifiedConstraints
    InstanceSigs, FlexibleContexts, FlexibleInstances, KindSignatures, LiberalTypeSynonyms, LambdaCase, FunctionalDependencies
    MultiParamTypeClasses, NoImplicitPrelude, PackageImports, PolyKinds, RankNTypes, ViewPatterns, ScopedTypeVariables,
    StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeFamilyDependencies, TypeOperators, DerivingVia
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs -fno-strictness -fno-warn-orphans
